hphp/test/zend/good/ext/phar/tests/tar/tar_openssl_hash.php.skipif
<?php if (!extension_loaded('phar')) die('skip');
if (!extension_loaded("spl")) die("skip SPL not available");
if (!extension_loaded("zlib")) die("skip zlib not available");
if (!extension_loaded("openssl")) die("skip openssl not available");